--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Jeng-Lin Li</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Homepage and blog">
-    <meta name="author" content="Kuo-Hao Zeng">
+    <meta name="author" content="Jeng-Lin Li">
     
     <link rel="canonical" href="https://JengLinLi.github.io/">
     <link rel="alternate" type="application/rss+xml" title="RSS Feed for Avi Singh" href="/feed.xml" />
