--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Homepage and blog">
     <meta name="author" content="Jeng-Lin Li">
     
-    <link rel="canonical" href="https://JengLinLi.github.io/">
+    <link rel="canonical" href="https://jenglinli.github.io/">
     <link rel="alternate" type="application/rss+xml" title="RSS Feed for Avi Singh" href="/feed.xml" />
 
     <!-- Custom CSS -->
@@ -30,7 +30,7 @@
     <meta property="og:type" content="article">
     <meta property="og:title" content="Jeng-Lin Li">
     <meta property="og:description" content="Homepage and blog">
-    <meta property="og:url" content="https://JengLinLi.github.io/index.html">
+    <meta property="og:url" content="https://jenglinli.github.io/index.html">
     <meta property="og:site_name" content="Jeng-Lin Li">
 
     <!-- Twitter Card -->
@@ -137,7 +137,7 @@
 <p></p>
 
 
-<p>My <a href="https://JengLinLi.github.io/assets/CV.pdf">CV [PDF]</a>, last updated March 2017.</p>
+<p>My <a href="https://jenglinli.github.io/assets/CV.pdf">CV [PDF]</a>, last updated March 2017.</p>
 
 <h2 id="a-namepubsapublications"><a name="pubs"></a>Publication</h2>
 
