--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     
         <meta name="twitter:site" content="@DeepHaoHao" />
     
-    <meta name="twitter:title" content="Kuo-Hao Zeng" />
+    <meta name="twitter:title" content="Jeng-Lin Li" />
     <meta name="twitter:description" content="Homepage and blog" />
     <meta name="twitter:url" content="https://KuoHaoZeng.github.io/index.html" /> -->
 
