--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           <td class="table_image_spec" align="center" ><font size="2">Sept. 13 - June. 13</font></td>
       </tr>
       <tr> 
-          <td class="table_image_spec" align="center" ><font size="2">PHD in EE</font></td>
+          <td class="table_image_spec" align="center" ><font size="2">PH in EE</font></td>
           <td class="table_image_spec" align="center" ><font size="2">M.S. in EE</font></td>
           <td class="table_image_spec" align="center" ><font size="2">B.S. in EE</font></td>
       </tr>  
