--- a/index.html
+++ b/index.html
@@ -120,10 +120,8 @@
 
 <p>I am currently a work in <a href="">Behavioral Informatics and Interaction Computational Lab(BIIC)</a> with 
 
-<div><img hspace="30" src="/images/nthu.jpg" height="60">
-    <img hspace="30" src="/images/nthu.jpg" height="60">
-    <img hspace="30" src="/images/nthu.jpg" height="60">
-</div><table cellpadding="8">
+
+<div><table cellpadding="8" border="0|0">
       <tr>
           <td class="table_image_spec" align="center" ><img hspace="30" src="/images/nthu.jpg" height="60"></td>
           <td class="table_image_spec" align="center" ><img hspace="30" src="/images/nthu.jpg" height="60"></td>
@@ -141,7 +139,11 @@
       </tr>  
   </table>
 </div>    
-<!--         
+<!--  
+<div><img hspace="30" src="/images/nthu.jpg" height="60">
+    <img hspace="30" src="/images/nthu.jpg" height="60">
+    <img hspace="30" src="/images/nthu.jpg" height="60">
+</div>
 <font size="2">
 <div>Sept. 16 - present &nbsp;&nbsp;
     Sept. 15 - Aug. 16 &nbsp;&nbsp;
