--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
 2017 <hr style="display: inline-block; width: 88%; margin-bottom: 4px; margin-right: 1%; float:right;" />
             
-<div><img style="float: left;" vspace="25" src="/images/RiskAware.jpg" height="135"></a>
+<div><img style="float: left;" vspace="25" src="/images/IS_Dyad.png" height="135"></a>
 <font size="3">
 <div style="line-height:1.5">&nbsp;<b>Integrating Dyadic Interaction Dynamics using Sub-dictionary Behavior Encoding to Enhance Speech Emotion Recognition</b></a>&nbsp;<img src="/images/Spotlight.jpeg" height="25">
 <div style="line-height:1.5">&nbsp;<b>Jeng-Lin Li</b>, Huang-Cheng Chou, Chi-Chun Lee</a>
@@ -176,7 +176,7 @@
 
 <br>
 
-<div><img style="float: left;" src="/images/VideoQA.jpg" height="145"></a>
+<div><img style="float: left;" src="/images/ACII.png" height="130"></a>
 <font size="3">
 <div style="line-height:1.5">&nbsp;<b>A Bootstrapped Multi-View Weighted Kernel Fusion Framework for Cross-Corpus Integration of Multimodal Emotion Recognition</b></a>
 <div style="line-height:1.5">&nbsp;Chun-Min Chang, Bo-Hao Su, Shih-Chen Lin, <b>Jeng-Lin Li</b>, Chi-Chun Lee</a>
@@ -187,7 +187,7 @@
 
 <br>
 
-<div><img style="float: left;" src="/images/Title_genertion.jpg" height="130"></a>
+<div><img style="float: left;" src="/images/IS_challenge.png" height="130"></a>
 <font size="3">
 <div style="line-height:1.5">&nbsp;<b>Automatic Detection of Speech under Cold using Discriminative Autoencoders and Strength Modeling with Multiple Sub-Dictionary Generation</b></a>
 <div style="line-height:1.5">&nbsp;Chia-Lung Wu, Hsiang-Ping Hsu, Xian-Feng Liao, Yu Tsao, Hao-Chun Yang, <b>Jeng-Lin Li</b>, Chi-Chun Lee, Hung-Shin Lee and Hsin-Min Wang</a>
