--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
 <br>
 
-<div><img style="float: left;" hspace="2" vspace="12" src="/images/CVFX.jpg" height="70"></a>
+<div><img style="float: left;" hspace="2" vspace="12" src="/images/ssp.png" height="70"></a>
 <font size="3">
 <div style="line-height:1.5">&nbsp;<b>Speech Signal Processing</b></a>
 <div style="line-height:1.5">&nbsp;<b>Jeng-Lin Li</b></a>
