--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
 
 2017 <hr style="display: inline-block; width: 88%; margin-bottom: 4px; margin-right: 1%; float:right;" />
             
-<div><img style="float: left;" vspace="25" src="/images/IS_Dyad.png" height="100"></a>
-<font size="2">
+<div><img style="float: left;" vspace="25" src="/images/IS_Dyad.png" height="100" weigth="130"></a>
+<font size="3">
 <div style="line-height:1.5">&nbsp;<b>Integrating Dyadic Interaction Dynamics using Sub-dictionary Behavior Encoding to Enhance Speech Emotion Recognition</b></a>&nbsp;<img src="/images/Spotlight.jpeg" height="25">
 <div style="line-height:1.5">&nbsp;<b>Jeng-Lin Li</b>, Huang-Cheng Chou, Chi-Chun Lee</a>
 <div style="line-height:1.5">&nbsp;<i>Summitted to Interspeech: Annual Conference of the International Speech Communication Association, 2017</i></a>
@@ -176,8 +176,8 @@
 
 <br>
 
-<div><img style="float: left;" src="/images/ACII.PNG" height="100"></a>
-<font size="2">
+<div><img style="float: left;" src="/images/ACII.PNG" height="100" weigth="130"></a>
+<font size="3">
 <div style="line-height:1.5">&nbsp;<b>A Bootstrapped Multi-View Weighted Kernel Fusion Framework for Cross-Corpus Integration of Multimodal Emotion Recognition</b></a>
 <div style="line-height:1.5">&nbsp;Chun-Min Chang, Bo-Hao Su, Shih-Chen Lin, <b>Jeng-Lin Li</b>, Chi-Chun Lee</a>
 <div style="line-height:1.5">&nbsp;<i>The Conference on Affective Computing and Intelligent Interaction (ACII), 2017</i></a>
@@ -187,8 +187,8 @@
 
 <br>
 
-<div><img style="float: left;" src="/images/IS_challenge.png" height="100"></a>
-<font size="2">
+<div><img style="float: left;" src="/images/IS_challenge.png" height="100" weigth="130"></a>
+<font size="3">
 <div style="line-height:1.5">&nbsp;<b>Automatic Detection of Speech under Cold using Discriminative Autoencoders and Strength Modeling with Multiple Sub-Dictionary Generation</b></a>
 <div style="line-height:1.5">&nbsp;Chia-Lung Wu, Hsiang-Ping Hsu, Xian-Feng Liao, Yu Tsao, Hao-Chun Yang, <b>Jeng-Lin Li</b>, Chi-Chun Lee, Hung-Shin Lee and Hsin-Min Wang</a>
 <div style="line-height:1.5">&nbsp;<i>Challeng Paper of Interspeech: Annual Conference of the International Speech Communication Association, 2017</i></a>
@@ -211,7 +211,7 @@
 
 <br>
 
-<div><img style="float: left;" hspace="2" vspace="12" src="/images/ssp.png" height="70"></a>
+<div><img style="float: left;" hspace="2" vspace="12" src="/images/ssp.png" height="80"></a>
 <font size="3">
 <div style="line-height:1.5">&nbsp;<b>Speech Signal Processing</b></a>
 <div style="line-height:1.5">&nbsp;<b>Jeng-Lin Li</b></a>
