--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 <p>I am currently a work in <a href="http://biic.ee.nthu.edu.tw/">Behavioral Informatics and Interaction Computational Lab(BIIC)</a> with <a href="http://www.ee.nthu.edu.tw/cclee/">chi-Chun Lee</a>. 
 
 
-<div><table style="border-collapse: collapse border: none" border='0'>
+<div><table border='0'>
       <tr style="border: none">
           <td class="table_image_spec" align="center" ><img hspace="30" src="/images/nthu.jpg" height="60"></td>
           <td class="table_image_spec" align="center" ><img hspace="30" src="/images/nthu.jpg" height="60"></td>
