--- a/index.html
+++ b/index.html
@@ -121,18 +121,18 @@
 <p>I am currently a work in <a href="http://biic.ee.nthu.edu.tw/">Behavioral Informatics and Interaction Computational Lab(BIIC)</a> with <a href="http://www.ee.nthu.edu.tw/cclee/">chi-Chun Lee</a>. 
 
 
-<div><table border='0'>
-      <tr style="border: none">
+<div><table>
+      <tr>
           <td class="table_image_spec" align="center" ><img hspace="30" src="/images/nthu.jpg" height="60"></td>
           <td class="table_image_spec" align="center" ><img hspace="30" src="/images/nthu.jpg" height="60"></td>
           <td class="table_image_spec" align="center" ><img hspace="30" src="/images/nthu.jpg" height="60"></td>
       </tr>
-      <tr style="border: none"> 
+      <tr> 
           <td class="table_image_spec" align="center" ><font size="2">Sept. 16 - present</font></td>
           <td class="table_image_spec" align="center" ><font size="2">Sept. 15 - Aug. 16</font></td>
           <td class="table_image_spec" align="center" ><font size="2">Sept. 13 - June. 13</font></td>
       </tr>
-      <tr style="border: none"> 
+      <tr> 
           <td class="table_image_spec" align="center" ><font size="2">PHD in EE</font></td>
           <td class="table_image_spec" align="center" ><font size="2">M.S. in EE</font></td>
           <td class="table_image_spec" align="center" ><font size="2">B.S. in EE</font></td>
