--- a/index.html
+++ b/index.html
@@ -127,11 +127,15 @@
           <td class="table_image_spec" align="center" ><img hspace="30" src="/images/nthu.jpg" height="60"></td>
           <td class="table_image_spec" align="center" ><img hspace="30" src="/images/nthu.jpg" height="60"></td>
       </tr>
+    </table></div>  
+<div><table rules="none">    
       <tr> 
           <td class="table_image_spec" align="center" ><font size="2">Sept. 16 - present</font></td>
           <td class="table_image_spec" align="center" ><font size="2">Sept. 15 - Aug. 16</font></td>
           <td class="table_image_spec" align="center" ><font size="2">Sept. 13 - June. 13</font></td>
       </tr>
+    </table></div>  
+<div><table rules="none">
       <tr> 
           <td class="table_image_spec" align="center" ><font size="2">PHD in EE</font></td>
           <td class="table_image_spec" align="center" ><font size="2">M.S. in EE</font></td>
