--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
 
 <div><table rules="none" frame="none" cellpadding=0>
       <tr>
+          <td class="table_image_spec" align="center" ><img hspace="30" src="/images/nthu.jpg" height="60"><br>Sept. 16 - present<br>PHD in EE</td>
           <td class="table_image_spec" align="center" ><img hspace="30" src="/images/nthu.jpg" height="60"></td>
           <td class="table_image_spec" align="center" ><img hspace="30" src="/images/nthu.jpg" height="60"></td>
-          <td class="table_image_spec" align="center" ><img hspace="30" src="/images/nthu.jpg" height="60"></td>
-      </tr>
+<!--      </tr> 
 <!--    </table></div>  -->
 <!-- <div><table rules="none" cellpadding=0>    -->
       <tr> 
