--- a/index.html
+++ b/index.html
@@ -123,26 +123,27 @@
 
 <div><table rules="none" frame="none" cellpadding=0>
       <tr>
-          <td class="table_image_spec" align="center" ><img hspace="30" src="/images/nthu.jpg" height="60"><br>Sept. 16 - present<br>PHD in EE</td>
           <td class="table_image_spec" align="center" ><img hspace="30" src="/images/nthu.jpg" height="60"></td>
           <td class="table_image_spec" align="center" ><img hspace="30" src="/images/nthu.jpg" height="60"></td>
-<!--      </tr> 
-<!--    </table></div>  -->
-<!-- <div><table rules="none" cellpadding=0>    -->
+          <td class="table_image_spec" align="center" ><img hspace="30" src="/images/nthu.jpg" height="60"></td>
+      </tr> 
+    </table></div>  
+<div><table rules="none" cellpadding=0>    
       <tr> 
-          <td class="table_image_spec" align="center" ><font size="2">Sept. 16 - present</font></td>
-          <td class="table_image_spec" align="center" ><font size="2">Sept. 15 - Aug. 16</font></td>
-          <td class="table_image_spec" align="center" ><font size="2">Sept. 13 - June. 13</font></td>
+          <td class="table_image_spec" align="center" ><font size="2">Sept. 16 - present<br>PHD in EE</font></td>
+          <td class="table_image_spec" align="center" ><font size="2">Sept. 15 - Aug. 16<br>M.S. in EE</font></td>
+          <td class="table_image_spec" align="center" ><font size="2">Sept. 13 - June. 13<br>B.S. in EE</font></td>
       </tr>
-<!--    </table></div>  -->
-<!--<div><table rules="none" cellpadding=0> -->
+    </table></div>  
+<!--         
+<div><table rules="none" cellpadding=0> 
       <tr> 
           <td class="table_image_spec" align="center" ><font size="2">PHD in EE</font></td>
           <td class="table_image_spec" align="center" ><font size="2">M.S. in EE</font></td>
           <td class="table_image_spec" align="center" ><font size="2">B.S. in EE</font></td>
       </tr>  
   </table>
-</div>    
+</div>  -->  
 <!--  
 <div><img hspace="30" src="/images/nthu.jpg" height="60">
     <img hspace="30" src="/images/nthu.jpg" height="60">
