--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
 
 <div><table rules="none" frame="none" cellpadding=0>
       <tr>
-          <td class="table_image_spec" align="center" ><img hspace="30" src="/images/nthu.jpg" height="60"></td>
-          <td class="table_image_spec" align="center" ><img hspace="30" src="/images/nthu.jpg" height="60"></td>
-          <td class="table_image_spec" align="center" ><img hspace="30" src="/images/nthu.jpg" height="60"></td>
+          <td class="table_image_spec" align="center" ><img hspace="30" src="/images/nthu.jpg" height="60"><br><font size="2">Sept. 16 - present<br>PHD in EE</font></td>
+          <td class="table_image_spec" align="center" ><img hspace="30" src="/images/nthu.jpg" height="60"><br><font size="2">Sept. 15 - Aug. 16<br>M.S. in EE</font></td>
+          <td class="table_image_spec" align="center" ><img hspace="30" src="/images/nthu.jpg" height="60"><br><font size="2">Sept. 13 - June. 13<br>B.S. in EE</font></td>
       </tr> 
-    </table></div>  
+    </table></div>  <!-- 
 <div><table rules="none" cellpadding=0>    
       <tr> 
           <td class="table_image_spec" align="center" ><font size="2">Sept. 16 - present<br>PHD in EE</font></td>
@@ -135,7 +135,7 @@
           <td class="table_image_spec" align="center" ><font size="2">Sept. 13 - June. 13<br>B.S. in EE</font></td>
       </tr>
     </table></div>  
-<!--         
+        
 <div><table rules="none" cellpadding=0> 
       <tr> 
           <td class="table_image_spec" align="center" ><font size="2">PHD in EE</font></td>
